Update .travis.yml with forge_password [skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ deploy:
   provider: puppetforge
   user: herculesteam
   password:
-    secure: ""
+    secure: "P/gSimsZdrPv/RjaRBtVS1WpQYMNm8WNpnbeb5Tax/JR2gGE65Cb3flgDnWM4cyd2A9qeiBim7itLxOALqQC/wmtihbvxZpDBnItqmkrJ0TtyVah5ovRsm8paori+7TuWjdspgkafuToOkHO3KCgIySqWiAzG/sLs1gpMX0QZb8="
   on:
     tags: true
     # all_branches is required to use tags
